# email

./: .gitignore  .hgignore  LICENSE  Makefile.am  Makefile.in  README.md  configure  configure.ac  email.c  email.h  lib.urp  mail.c  mail.h  mail.urs
examples/: multiple.ur  multiple.urp  multiple.urs  test.ur  test.urp
